# pelican

./: .gitignore  README.rst  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: deploy.yml  static.yml
content/: keyboard-review.md  markdown-example.md
content/pages/: about.md
theme/static/: main.css
theme/templates/: article.html  article.html.jinja  base.html  categories.html  categories.html.jinja  category.html  category.html.jinja  index.html  index.html.jinja  page.html  page.html.jinja  tag.html  tag.html.jinja
