[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Thomas MK <tmke@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.7.2"}
typogrify = "^2.0.7"
Pygments = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
